# PineapplePlayer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jesse/pineappleplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_interface.c  video_decoder.c  video_decoder.h
app/src/main/cpp/libavcodec/: avcodec.h  avdct.h  vaapi.h  version.h  videotoolbox.h
app/src/main/cpp/libavdevice/: avdevice.h
app/src/main/cpp/libavfilter/: avfilter.h  version.h
app/src/main/cpp/libavformat/: avformat.h  version.h
app/src/main/cpp/libavutil/: pixfmt.h
app/src/main/cpp/libpostproc/: version.h
app/src/main/cpp/libswresample/: version.h
app/src/main/cpp/libswscale/: version.h
app/src/main/java/com/jesse/pineappleplayer/: App.java  MainActivity.java  TempPlayActivity.java
app/src/main/java/com/jesse/pineappleplayer/base/: BaseActivity.java  DisplayActivity.java
app/src/main/java/com/jesse/pineappleplayer/display/: Drawable2d.java  FullFrameRect.java  GLDisplayRenderer.java  GLDisplayView.java  GlUtils.java  Texture2DProgram.java
app/src/main/java/com/jesse/pineappleplayer/display/yuv/: GLDisplayYUVRenderer.java  GLProgram.java
app/src/main/java/com/jesse/pineappleplayer/ffmpeg/: FFmpegInterface.java
app/src/main/java/com/jesse/pineappleplayer/media/: AudioCodecWrapper.java  MediaCodecWrapper.java  MediaParser.java  MediaParser2.java  VideoCodecWrapper.java
app/src/main/res/layout/: activity_main.xml  activity_temp.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jesse/pineappleplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
